--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,9 @@ dependencies = [
 Homepage = "https://github.com/UC-Davis-molecular-computing/ode-to-transcription-network"
 Issues = "https://github.com/UC-Davis-molecular-computing/ode-to-transcription-network/issues"
 
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"]
 
+[tool.setuptools]
+packages = ["ode2tn"]
