--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ Issues = "https://github.com/UC-Davis-molecular-computing/ode-to-transcription-n
 
 [build-system]
 requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = ["ode2tn"]
+
