--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,5 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 packages = ["ode2tn"]
 
+[tool.setuptools.exclude-package-data]
+"*" = ["plots/*"]
